# iTransformer

./: .gitignore  PLAN.md  pyproject.toml  run.py  run_all.py  run_all.sh  visualize_testformer.ipynb
drafts/: APEmb.ipynb  FlexResize.ipynb  dep-period_extractor.ipynb  ema-decomp.ipynb  fft_period_extractor.ipynb  multiscale-agg.ipynb  test-embedding.ipynb
experiments/: exp_basic.py  exp_long_term_forecasting.py  exp_long_term_forecasting_partial.py
layers/: Embed.py  MDM.py  PAEmbedv1.py  PAEmbedv2.py  SeasonFlow.py  SelfAttention_Family.py  TrendFlow.py  channel_period_flex_enhancer.py  ema.py  masked_attention.py  mul.py  projector.py
model/: Testformer.py
scripts/: compare_metrics.py
scripts/multivariate_forecasting/ECL/: Testformer.sh  iTransformer.sh
scripts/multivariate_forecasting/ETT/: Testformer_ETTh1.sh  Testformer_ETTh2.sh  Testformer_ETTm1.sh  Testformer_ETTm2.sh  iTransformer_ETTh1.sh  iTransformer_ETTh2.sh  iTransformer_ETTm1.sh  iTransformer_ETTm2.sh
scripts/multivariate_forecasting/Exchange/: Testformer.sh  iTransformer.sh
scripts/multivariate_forecasting/PEMS/: Testformer_03.sh  Testformer_04.sh  Testformer_07.sh  Testformer_08.sh  iTransformer_03.sh  iTransformer_04.sh  iTransformer_07.sh  iTransformer_08.sh
scripts/multivariate_forecasting/SolarEnergy/: Testformer.sh  iTransformer.sh
scripts/multivariate_forecasting/Traffic/: Testformer.sh  iTransformer.sh
scripts/multivariate_forecasting/Weather/: Testformer.sh  iTransformer.sh
utils/: losses.py  plotters.py  tools.py
