[project]
name = "itransformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy<2.0.0",
    "pandas>=2.3.3",
    "reformer-pytorch>=1.4.4",
    "scikit-learn>=1.8.0",
    "torch==2.5.1",
    "wandb>=0.24.0",
]


[tool.uv]
python-install-mirror = "https://mirror.nju.edu.cn/github-release/indygreg/python-build-standalone/"

[[tool.uv.index]]
name = "pypi-tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true
